# MotionAI

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  KNOWN_LIMITATIONS.md  LICENSE  PUSH_TO_GITHUB.txt  README.md  ROADMAP.md  SECURITY.md  TODO.md  docker-compose.yml  firebase-applet-config.json  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  server.ts  signaling-server.js  vite.config.ts
.github/: pull_request_template.md
docs/: AI_SAFETY_AND_PROVIDER_GUARANTEES.md  CRDT_CONFLICT_RESOLUTION.md  EPIC_ROUND_2.md  EXPORT_IMPORT_GUARANTEES.md  GITHUB_ROADMAP_STATUS.md  GITHUB_TOKEN_SETUP.md  LEVEL_UP_RESEARCH.md  PHASE_0_ISSUES.md  PHASE_0_ISSUES_READY.md  RELEASE_CHECKLIST.md  ROADMAP_TODO.md  ROLLBACK.md  SHIPPED.md  VERSIONING.md  WEBHOOK_API.md  WORKSPACE_SCHEMA.md
e2e/: meeting-parser.spec.ts  mobile-pwa.spec.ts  smoke.spec.ts  webrtc-sync.spec.ts
public/: manifest.json  sw.js
scripts/: ai-contract-tests.ts  audit-secrets.mjs  automation-trigger-tests.ts  browser-smoke-test.mjs  capture-readme-media.mjs  chunk-budget-check.mjs  create-github-issues.sh  deploy.sh  generate-changelog.sh  import-export-tests.ts  importer-tests.ts  local-auth-tests.ts  meeting-parser-contract-tests.ts  migration-tests.ts  persistence-torture-tests.ts  rasterize-brand.mjs  reliability-tests.ts  schema-invariant-tests.ts  secret-redaction-tests.ts  server-integration-tests.ts  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+128 files in other folders)
